Wed Jul 15 22:20:10 UTC 2009  Mike Martinez  <martinez_m@ociweb.com>

        * dds/DCPS/Service_Participant.h:
        * dds/DCPS/Service_Participant.cpp:

	  Added configurable setting of scheduler quantum values.  This
	  is required for SunOS systems which require a non-zero value.

        * tests/DCPS/Priority/transport.ini:

	  Add new scheduler_slice key for use on SunOs systems.

Wed Jul 15 19:55:53 UTC 2009  Steven Stallion  <stallions@ociweb.com>

        * MPC/modules/IDL2JNIHelper.pm:
        * MPC/modules/IDLBase.pm:

          Fixed MPC dependency issue in java/tests/complex_idl.

Tue Jul 14 19:41:07 UTC 2009  Steven Stallion  <stallions@ociweb.com>

        * dds/DCPS/DataReaderImpl.h:
        * dds/DCPS/DataReaderImpl.cpp:
        * docs/design/lockmap.txt:

          Added RW mutex to protect writers map in DataReaderImpl instances.
          This fixes a SEGV occasionally seen in Windows XP builds (presumably
          others as well).

Tue Jul 14 16:10:17 UTC 2009  Mike Martinez  <martinez_m@ociweb.com>

        * tests/DCPS/Priority/run_test.pl:
        * tests/DCPS/Priority/services.conf:

          Renamed svc.conf to avoid picking it up by default.  This was
          an issue for executing with static builds.

        * tests/DCPS/Priority/svc.conf:

          Removed this file.

Mon Jul 13 20:41:41 UTC 2009  Yan Dai  <dai_y@ociweb.com>

        * dds/DCPS/WriteDataContainer.cpp:

          Made empty_condition_ wait after holding the lock. This fixed
          the deadlock during shutdown shown in a windows build.

Fri Jul 10 22:09:52 UTC 2009  Adam Mitz  <mitza@ociweb.com>

        * tests/DCPS/Thrasher/Subscriber.cpp:
        * tests/DCPS/Thrasher/run_test.pl:

          Subscriber now knows how many writers to expect and won't shut down
          until that many writers have been seen in SubscriptionMatchStatus.

Fri Jul 10 21:14:42 UTC 2009  Adam Mitz  <mitza@ociweb.com>

        * dds/DCPS/DataWriterImpl.cpp:
