@@ -4,6 +4,10 @@ scheduler=SCHED_RR
 # scheduler=SCHED_FIFO
 # scheduler=SCHED_OTHER
 
+# On SunOS machines only, the slice value must be specified larger
+# than 0 uS for SCHED_FIFO and SCHED_RR.
+scheduler_slice=500
+
 [transport_impl_1]
 transport_type=SimpleTcp
 
